<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:padding="@dimen/_15sdp"
    android:background="@drawable/shape_activity_backgroun"
    >


    <ImageView
        android:id="@+id/log_img_logo"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_80sdp"
        android:src="@drawable/ic_logo_game"
        android:layout_marginTop="@dimen/_80sdp"
        android:layout_gravity="center"/>


    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/edit_Text_layout_1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="@dimen/_255sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_40sdp"
        >

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/log_et_username"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/log_ET1_username"
        android:inputType="textPersonName"
        android:textSize="@dimen/_9ssp"
        android:textColor="@color/black"
        android:padding="@dimen/_2sdp"
        />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/edit_Text_layout_2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="@dimen/_255sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_10sdp"
        >

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/log_et_password"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_40sdp"
        android:hint="@string/log_ET2_pass"
        android:textColor="@color/black"
        android:inputType="textPassword"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/_9ssp"
        />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_20sdp"
        android:padding="@dimen/_10sdp"
        android:layout_gravity="center_horizontal"
        android:weightSum="2"
        >


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/log_btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_weight="1"
            android:background="@drawable/shape_buttons"
            android:text="@string/log_login"
            android:textColor="@color/white"
            android:textSize="@dimen/_10ssp"
             />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/log_btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/shape_buttons"
            android:text="@string/log_register"
            android:textColor="@color/white"
            android:textSize="@dimen/_10ssp"
            tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/log_cb_remeberME"
        android:layout_gravity="center_horizontal"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        android:text="@string/log_rememebrinfo"
        android:layout_marginTop="@dimen/_10sdp"
        android:textSize="@dimen/_9ssp"
        android:padding="@dimen/_7sdp"
        android:textColor="@color/black"
        />


</LinearLayout>