<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:orientation="vertical"
    android:background="@drawable/shape_activity_backgroun"
    android:padding="@dimen/_15sdp"
    >


    <LinearLayout
        android:layout_width="@dimen/_270sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_50sdp"
        >


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_Text_layout_1"
            android:layout_width="@dimen/_160sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reg_et_fullname"
                android:layout_width="@dimen/_155sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:textSize="@dimen/_9ssp"
                android:hint="@string/reg_name"
                android:textColor="@color/black"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>




        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/reg_img_userimage"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_70sdp"
            android:layout_weight="1"
            android:src="@drawable/blank_profile_picture"
            android:padding="@dimen/_5sdp"

            />

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/edit_Text_layout_2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="@dimen/_270sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reg_et_email"
            android:layout_width="@dimen/_265sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:hint="@string/reg_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textSize="@dimen/_9ssp" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/edit_Text_layout_3"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="@dimen/_270sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="@dimen/_5sdp"
        >

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/reg_et_username"
        android:layout_width="@dimen/_265sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:textSize="@dimen/_9ssp"
        android:hint="@string/reg_username"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_10sdp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="@dimen/_272sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:orientation="horizontal"
        android:textSize="@dimen/_9ssp"
        android:layout_gravity="start"
        android:weightSum="2"
        >

        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/edit_Text_layout_4"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/_133sdp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reg_et_password"
                android:layout_width="@dimen/_128sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical|center"
                android:layout_weight="1"
                android:hint="@string/reg_passward"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textSize="@dimen/_9ssp"

                />

    </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/edit_Text_layout_5"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/_133sdp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reg_et_repass"
                android:layout_width="@dimen/_128sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_vertical|start"
                android:layout_weight="1"
                android:hint="@string/reg_re_pass"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textSize="@dimen/_9ssp" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <Spinner
        android:id="@+id/reg_sp_country"
        android:layout_width="@dimen/_265sdp"
        android:layout_height="@dimen/_43sdp"
        android:layout_gravity="start"
        android:textSize="@dimen/_9ssp"
        android:layout_marginTop="@dimen/_5sdp"
        android:entries="@array/countries"
        android:textColor="@color/black"
        android:background="@drawable/shape_spinner_border"/>


    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/edit_Text_layout_6"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="@dimen/_270sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        >

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/reg_et_DB"
        android:layout_width="@dimen/_265sdp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_9ssp"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_gravity="start"
        android:ems="1"
        android:hint="@string/reg_BD"
         />

    </com.google.android.material.textfield.TextInputLayout>


    <RadioGroup
        android:id="@+id/reg_RG"
        android:layout_width="@dimen/_270sdp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        android:orientation="horizontal"
      >

        <RadioButton
            android:id="@+id/reg_rb_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:checked="true"
            android:text="@string/reg_male"
            android:textColor="@color/black"
            android:textSize="@dimen/_9ssp"


            />

        <RadioButton
            android:id="@+id/reg_rb_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="@dimen/_125sdp"
            android:text="@string/reg_female"
            android:textColor="@color/black"
            android:textSize="@dimen/_9ssp" />
    </RadioGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/reg_btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_10ssp"
        android:text="@string/reg_save"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/shape_buttons"
        />


</LinearLayout>