<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_15sdp"
    android:orientation="vertical"
    android:background="@drawable/shape_activity_backgroun"
    tools:context=".ChangePasswordActivity"
    >


    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/edit_Text_layout_1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="@dimen/_255sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_150sdp"
        >

    <com.google.android.material.textfield.TextInputEditText

        android:id="@+id/changePass_et_oldPassword"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        android:hint="@string/CPA_new_pass"
        android:textSize="@dimen/_12ssp"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:layout_gravity="center_horizontal"
    />

    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/edit_Text_layout_2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="@dimen/_255sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_20sdp"
        >

    <com.google.android.material.textfield.TextInputEditText

        android:id="@+id/changePass_et_newPass"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        android:hint="@string/CPA_new_pass"
        android:textColor="@color/black"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_15sdp"
        android:textSize="@dimen/_12ssp"
        android:inputType="textPassword"
        />
    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/edit_Text_layout_3"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="@dimen/_255sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_10sdp"
        >

    <com.google.android.material.textfield.TextInputEditText

        android:id="@+id/changePass_et_reEnterNewPass"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/CPA_new_pass2"
        android:textSize="@dimen/_12ssp"
        android:textColor="@color/black"
        android:inputType="textPassword"
       />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/changePass_btn_save"
        android:layout_width="@dimen/_110sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:background="@drawable/shape_buttons"
        android:text="@string/CPA_btn_save"
        android:textColor="@color/white"
        android:textSize="@dimen/_16ssp"
        android:layout_gravity="center"
         />
</LinearLayout>